// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchAsync should fire async fetching process 1`] = `[Function]`;

exports[`#fetchAsync should fire async fetching process 2`] = `[Function]`;

exports[`#fill should fill with fetched data 1`] = `
Object {
  "payload": Object {
    "name": "Payload",
  },
  "type": "COMMENTS_FILL",
}
`;

exports[`#fill should fill with fetched data 2`] = `
Object {
  "payload": Object {
    "name": "Payload",
  },
  "type": "COMMENT_FILL",
}
`;

exports[`#setFetchingError should throw an error 1`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "COMMENTS_SET_FETCHING_ERROR",
}
`;

exports[`#setFetchingError should throw an error 2`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "COMMENT_SET_FETCHING_ERROR",
}
`;

exports[`#startFetching should start fetching process 1`] = `
Object {
  "type": "COMMENTS_START_FETCHING",
}
`;

exports[`#startFetching should start fetching process 2`] = `
Object {
  "type": "COMMENT_START_FETCHING",
}
`;

exports[`#stopFetching should stop fetching process 1`] = `
Object {
  "type": "COMMENTS_STOP_FETCHING",
}
`;

exports[`#stopFetching should stop fetching process 2`] = `
Object {
  "type": "COMMENT_STOP_FETCHING",
}
`;
